syntax = "proto3";

package products;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (Product);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
}

message GetProductRequest {
  string id = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}
